// Copyright 2023 Shenry Tech AB
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.


syntax = "proto3";
option go_package = "github.com/shenrytech/shdb";

import "google/protobuf/timestamp.proto";

/*

  Key:
    Type 32bit
    UUID 16*8bit
    Labels
    Description
    Timestamps
    MessagePayload
*/

package shdb;

message Metadata {
  bytes type = 1;
  bytes uuid = 2;
  repeated string labels = 3;
  string description = 4;
  google.protobuf.Timestamp created_at = 5; 
  google.protobuf.Timestamp updated_at = 6;
}

message SearchHit {
  Metadata metadata = 1;
  repeated string hits = 2;
}

message SearchResult {
  repeated SearchHit hits = 1;
}

message TObject { 
  shdb.Metadata metadata = 1;
  string my_field = 2;
  uint64 my_int = 3; 
}